force-app/main/default/objects/Deviation_Sanction_Condition__c/Deviation_Sanction_Condition__c.object-meta.xml
<CustomObject>
    <label>Deviation/Sanction Condition</label>
    <nameField>
        <displayFormat>DSC-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviation/Sanction Conditions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>