force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved/Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deviation_Sanction_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>