force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Approving_Authority__c.field-meta.xml
<CustomField>
    <fullName>Approving_Authority__c</fullName>
    <label>Approving Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>