force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Authority_Role__c.field-meta.xml
<CustomField>
    <fullName>Authority_Role__c</fullName>
    <label>Authority Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>