force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Deviation__c.field-meta.xml
<CustomField>
    <fullName>Deviation__c</fullName>
    <label>Deviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>