force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Deviation_Description__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Description__c</fullName>
    <label>Deviation Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>