force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Deviations__c.field-meta.xml
<CustomField>
    <fullName>Deviations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deviations</label>
    <referenceTo>Deviation_Master__c</referenceTo>
    <relationshipLabel>Deviation/Sanction Conditions</relationshipLabel>
    <relationshipName>Deviation_Sanction_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>