force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Deviation/Sanction Conditions</relationshipLabel>
    <relationshipName>Deviation_Sanction_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>