force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Mitigants__c.field-meta.xml
<CustomField>
    <fullName>Mitigants__c</fullName>
    <label>Mitigants</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>