force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reason_Comments__c</fullName>
    <label>Reason Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>