force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Reason_Special_Condition__c.field-meta.xml
<CustomField>
    <fullName>Reason_Special_Condition__c</fullName>
    <label>Reason/Special Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>