force-app/main/default/objects/Deviation_Sanction_Condition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deviation</fullName>
            </value>
            <value>
                <fullName>Sanction Condition</fullName>
            </value>
            <value>
                <fullName>Special Condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>